<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:background="#FFFFFF"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#546E7A"/>

    <TextView
        android:id="@+id/tvCondition1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cond_1_upside_down"
        android:textSize="18sp"
        android:textColor="#000000"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tvCondition2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cond_2_airplane"
        android:textSize="18sp"
        android:textColor="#000000"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tvCondition3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cond_3_battery"
        android:textSize="18sp"
        android:textColor="#000000"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tvCondition4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cond_4_north"
        android:textSize="18sp"
        android:textColor="#000000"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tvCondition5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cond_5_sensor"
        android:textSize="18sp"
        android:textColor="#000000"
        android:padding="8dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="true"
        android:text="@string/btn_unlock" />

</LinearLayout>